<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarFeed"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/feed"
        android:titleTextColor="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
